--- a/docker-compose.mounted.yml
+++ b/docker-compose.mounted.yml
@@ -4,7 +4,7 @@ services:
     working_dir: /app
     volumes:
       - ./dist:/app/dist
-    command: ["sh", "-c", "npm install -g serve && serve -s dist -l 3000"]
+    command: ["sh", "-c", "npm install -g serve@14.2.4 && serve -s dist -l 3000"]
     ports:
       - "3000:3000"
     restart: unless-stopped
